--- a/src/renderer/src/assets/global.scss
+++ b/src/renderer/src/assets/global.scss
@@ -1,5 +1,16 @@
 body {
   @apply bg-black;
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  height: 600px;
+  #root {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-flow: column;
+  }
 }
 
 .drag {
