--- a/src/renderer/src/assets/global.scss
+++ b/src/renderer/src/assets/global.scss
@@ -1,9 +1,12 @@
 body {
-  @apply bg-black;
+  // @apply bg-black;
   box-sizing: border-box;
   position: relative;
-  width: 100%;
-  height: 600px;
+  width: 900px;
+  max-height: 600px;
+  overflow: hidden;
+  margin: 0px;
+  padding: 0px;
   #root {
     width: 100%;
     height: 100%;
@@ -11,6 +14,7 @@ body {
     display: flex;
     flex-flow: column;
   }
+  background: transparent !important;
 }
 
 .drag {
