--- a/src/renderer/src/assets/global.scss
+++ b/src/renderer/src/assets/global.scss
@@ -3,7 +3,7 @@ body {
   box-sizing: border-box;
   position: relative;
   width: 900px;
-  max-height: 600px;
+  height: 600px;
   overflow: hidden;
   margin: 0px;
   padding: 0px;
